<resources>
    <string name="app_name">GitHub APP</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_couldnt_reach_server">Can\'t reach searver</string>
    <string name="oops_something_went_wrong">Oops, something went wrong</string>
    <string name="search_for_repositories">Search for repositories</string>
    <string name="repository_name">Repository Name</string>
    <string name="author_name">Author Name</string>
    <string name="sorting">Sorting</string>
    <string name="sort_by_stars">Sort by Stars</string>
    <string name="sort_by_forks">Sort by Forks</string>
    <string name="sort_by_updated">Sort by Updated</string>
    <string name="reset_sort">Reset sort</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="open_external">Open external</string>
    <string name="score">Score:</string>
    <string name="language">Language:</string>
    <string name="issues">Issues:</string>
    <string name="forks">Forks:</string>
    <string name="stars">Stars:</string>
    <string name="repo_owner">Repo Owner:</string>
    <string name="repo_name">Repo Name:</string>
    <string name="created">Created</string>
    <string name="updated">Updated</string>
    <string name="repository_details">Repository Details</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
</resources>